# tracy

./: .gitignore  .prettierrc  AGENTS.md  CMakeLists.txt  CMakePresets.json  ProjectThemes.md  README.md  cmake_install.cmake  default.nix  flake.nix  main.cpp
include/accel/: accel_structure.h  bbox.h  bvh.h  octree.h
include/app/: cpu_viewer.h  gpu_viewer.h  gui.h  iviewer.h  scene_factory.h  viewer.h
include/core/: color.h  constants.h  random.h  ray.h
include/geometry/: geometry.h  mesh.h  plane.h  primitive.h  rectangle.h  sphere.h  triangle.h
include/io/: image.h  obj_loader.h
include/render/: direct_lighting_integrator.h  gpu_renderer.h  integrator.h  path_tracing_integrator.h  renderer.h  shader.h  whitted_integrator.h
include/scene/: camera.h  hit_record.h  scene.h
include/shading/: image_texture.h  light.h  material.h  shading.h  texture.h
include/shading/materials/: emissive_material.h  glass_material.h  lambert_material.h  material_base.h  material_types.h  mirror_material.h
src/accel/: bbox.cpp  bvh.cpp  octree.cpp
src/app/: cpu_viewer.cpp  gpu_viewer.cpp  gui.cpp  scene_factory.cpp  viewer.cpp
src/core/: random.cpp
src/core/shader/: random.glsl  ray.glsl
src/geometry/: mesh.cpp  plane.cpp  rectangle.cpp  sphere.cpp  triangle.cpp
src/geometry/shader/: plane.glsl  sphere.glsl  triangle.glsl
src/io/: image.cpp  obj_loader.cpp
src/render/: direct_lighting_integrator.cpp  gpu_renderer.cpp  path_tracing_integrator.cpp  renderer.cpp  shader.cpp  whitted_integrator.cpp
src/render/shader/: direct_lighting_integrator.glsl  display.frag  display.vert  raytrace.comp
src/scene/: camera.cpp  scene.cpp
src/scene/shader/: hit_record.glsl  scene.glsl
src/shading/: image_texture.cpp  light.cpp  material.cpp  texture.cpp
src/shading/materials/: emissive_material.cpp  glass_material.cpp  lambert_material.cpp  material_base.cpp  mirror_material.cpp
src/shading/shader/: light.glsl  material.glsl
